<resources>
    <string name="app_name">FASHION STYLE</string>
    <string name="frontdescription">Fashion Shop</string>
    <string name="front">life is too short to wear boring clothes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Exit</string>
    <string name="password_error">Password must contain at least 6 characters</string>
    <string name="clothes_title">Title</string>
    <string name="clothes_description">Description</string>
    <!--backdrop -->
    <string name="backdrop_menu_category_label">Category</string>
    <string name="backdrop_menu_featured_label">Featured</string>
    <string name="backdrop_menu_accessories_label">Accessories</string>
    <string name="backdrop_menu_woman_label">Woman</string>
    <string name="backdrop_menu_men_label">Men</string>
    <string name="backdrop_menu_account_label">Login</string>


    <string name="your_name">Enter your name</string>
    <string name="your_email">Enter your email</string>
    <string name="your_username">Enter your username</string>
    <string name="your_password">Enter your password</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>