<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Wendyec3.Button.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backdrop_menu_featured_label"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Wendyec3.Button.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backdrop_menu_category_label"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Wendyec3.Button.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backdrop_menu_accessories_label"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Wendyec3.Button.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backdrop_menu_woman_label"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Wendyec3.Button.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backdrop_menu_men_label"
        />
    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Wendyec3.Button.Text"
        android:id="@+id/button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backdrop_menu_account_label"
        />

</merge>