<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/front"
    tools:context=".FrontWendy"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="70dp"
        android:paddingTop="16dp"
        android:layout_marginTop="0dp"
        >
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="250dp"
            android:layout_marginTop="10dp"
            android:text="@string/frontdescription"
            android:textAllCaps="true"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/gray"


            />
        <TextView
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/front"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/gray"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/diseno_boton_next"
                android:text="@string/button_next" />


        </RelativeLayout>

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="390dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:src="@drawable/icon"/>
    </LinearLayout>
</ScrollView>