<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/woman"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Wendy Navarro Palma"
                android:textStyle="bold"
                android:textSize="22dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="54634521"
                android:textStyle="bold"
                android:textSize="12dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_image"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:text="Edit  image"
                android:textAllCaps="false"
                android:paddingEnd="25dp"
                />
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:importantForAutofill="no"/>
            <EditText
                android:id="@+id/yourEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:importantForAutofill="no"/>
            <EditText
                android:id="@+id/yourUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/your_username"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:importantForAutofill="no"/>
            <EditText
                android:id="@+id/yourPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:importantForAutofill="no"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:paddingStart="25dp"
                android:layout_gravity="center"
                android:text="@string/save"
                android:textAllCaps="false"
                android:paddingEnd="25dp"
                />


        </LinearLayout>

    </ScrollView>

</LinearLayout>